--- a/frontend/src/app/login/login.page.html
+++ b/frontend/src/app/login/login.page.html
@@ -5,11 +5,11 @@
         <div class="lista">
             <label class="item item-input">
          <span class= "input-label">Usuario</span>
-         <input [(ngModel)]="model.Usuario"  name="email"  required type="text" placeholder=""  maxLength="200" minLength="3">
+         <input [(ngModel)]="usuario"  name="email"  required type="text" placeholder=""  maxLength="200" minLength="3">
         </label>
             <label class="item item-input">
             <span class= "input-label">Contraseña</span>
-            <input [(ngModel)]="model.Contrasena" name="clave" required type="password" placeholder="" maxLength="200" minLength="3">
+            <input [(ngModel)]="contrasena" name="clave" required type="password" placeholder="" maxLength="200" minLength="3">
         </label>
         </div>
 
