--- a/frontend/src/app/menu/menu.page.html
+++ b/frontend/src/app/menu/menu.page.html
@@ -30,12 +30,11 @@
         <ion-row>
             <ion-col>
                 <ion-card>
-                    <ion-item>
+                    <ion-item routerLink="../consulta">
                         <ion-icon name="checkbox-outline" slot="start"></ion-icon>
                         <ion-label>
                             <h1>Consulta</h1>
                         </ion-label>
-                        <ion-button fill="outline" slot="end">View</ion-button>
                     </ion-item>
                 </ion-card>
             </ion-col>
