--- a/frontend/src/app/menu/menu.page.html
+++ b/frontend/src/app/menu/menu.page.html
@@ -15,11 +15,11 @@
     <ion-grid>
         <ion-row>
             <ion-col>
-                <ion-card [routerLink]="['/registro-usuario']">
+                <ion-card [routerLink]="['/registro-documento']">
                     <ion-item>
                         <ion-icon name="clipboard" slot="start"></ion-icon>
                         <ion-label>
-                            <h1>Registrarse</h1>
+                            <h1>Registro</h1>
                         </ion-label>
                         <ion-button fill="outline" slot="end">View</ion-button>
                     </ion-item>
@@ -39,19 +39,5 @@
                 </ion-card>
             </ion-col>
         </ion-row>
-        <ion-row>
-            <ion-col>
-                <ion-card>
-                    <ion-item>
-                        <ion-icon name="build" slot="start"></ion-icon>
-                        <ion-label>
-                            <h1>Configuración</h1>
-                        </ion-label>
-                        <ion-button fill="outline" slot="end">View</ion-button>
-                    </ion-item>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-
     </ion-grid>
 </ion-content>
