--- a/frontend/src/app/consulta-vendedor/consulta-vendedor.page.html
+++ b/frontend/src/app/consulta-vendedor/consulta-vendedor.page.html
@@ -1,46 +1,22 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-button routerLink="/menu" routersDirection="back">
+            <ion-button routerLink="/login" routersDirection="back">
                 <!--  enrutar a la otra vista -->
                 <ion-icon slot="icon-only" name="arrow-round-back"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title>Consulta de Usuarios</ion-title>
+        <ion-title>Consulta del Vendedor</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card>
-        <ion-item-sliding *ngFor='let estado of estadoActual'>
+        <ion-item-sliding *ngFor='let f of estado'>
 
             <ion-item>
                 <ion-grid>
-                    <ion-row>
-                        <ion-col>
-                            <ion-label>
-                                Usuario :
-                            </ion-label>
-                        </ion-col>
-                        <ion-col>
-                            <ion-label>
-                                {{estado.usuario}}
-                            </ion-label>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-label>
-                                Password :
-                            </ion-label>
-                        </ion-col>
-                        <ion-col>
-                            <ion-label>
-                                {{estado.contrasena}}
-                            </ion-label>
-                        </ion-col>
 
-                    </ion-row>
                     <ion-row>
                         <ion-col>
                             <ion-label>
@@ -49,10 +25,9 @@
                         </ion-col>
                         <ion-col>
                             <ion-label>
-                                {{estado.nombre}}
+                                {{f.nombres}}
                             </ion-label>
                         </ion-col>
-
                     </ion-row>
 
                     <ion-row>
@@ -63,29 +38,40 @@
                         </ion-col>
                         <ion-col>
                             <ion-label>
-                                {{estado.apellido}}
+                                {{f.apellidos}}
                             </ion-label>
                         </ion-col>
-
                     </ion-row>
 
                     <ion-row>
                         <ion-col>
                             <ion-label>
-                                Email :
+                                Dirección :
                             </ion-label>
                         </ion-col>
                         <ion-col>
                             <ion-label>
-                                {{estado.correo}}
+                                {{f.direccion}}
                             </ion-label>
                         </ion-col>
+                    </ion-row>
 
+                    <ion-row>
+                        <ion-col>
+                            <ion-label>
+                                Telefono :
+                            </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label>
+                                {{f.telefono}}
+                            </ion-label>
+                        </ion-col>
                     </ion-row>
                 </ion-grid>
             </ion-item>
-
         </ion-item-sliding>
     </ion-card>
+
 
 </ion-content>
