--- a/frontend/src/app/datos-personales/datos-personales.page.html
+++ b/frontend/src/app/datos-personales/datos-personales.page.html
@@ -11,80 +11,77 @@
 </ion-header>
 
 <ion-content>
-    <form (ngSubmit)="datosPer(formulario)" #formulario="ngForm">
-        <ion-list>
+    <ion-list>
+        <ion-item>
+            <ion-label position="floating">* Nombres Completos
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="nombres" type="text" required value=""></ion-input>
+        </ion-item>
 
-            <ion-item>
-                <ion-label position="floating">* Nombres Completos
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.nombre" name="nombre" type="text" required value=""></ion-input>
-            </ion-item>
+        <ion-item>
+            <ion-label position="floating">* Apellidos
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="apellidos" name=t ype="text" required value=""></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">* Edad
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="edad" type="text" required value=""></ion-input>
+        </ion-item>
 
-            <ion-item>
-                <ion-label position="floating">* Apellidos
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.apellido" name="apellido" type="text" required value=""></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-label position="floating">* Edad
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.edad" name="edad" type="text" required value=""></ion-input>
-            </ion-item>
+        <ion-item>
+            <ion-label>* Sexo</ion-label>
+            <ion-select [(ngModel)]="sexo" required interface="popover">
+                <ion-select-option value="Masculino">Masculino</ion-select-option>
+                <ion-select-option value="Femenino">Femenino</ion-select-option>
+            </ion-select>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">* Dirección
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="direccion" type="text" required value=""></ion-input>
+        </ion-item>
 
-            <ion-item>
-                <ion-label>* Sexo</ion-label>
-                <ion-select [(ngModel)]="model.sexo" name="sexo" required interface="popover">
-                    <ion-select-option value="Masculino">Masculino</ion-select-option>
-                    <ion-select-option value="Femenino">Femenino</ion-select-option>
-                </ion-select>
-            </ion-item>
-            <ion-item>
-                <ion-label position="floating">* Dirección
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.direccion" name="direccion" type="text" required value=""></ion-input>
-            </ion-item>
+        <ion-item>
+            <ion-label position="floating">* Teléfono
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="telefono" type="number" required value=""></ion-input>
+        </ion-item>
 
-            <ion-item>
-                <ion-label position="floating">* Teléfono
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.numero" name="numero" type="number" required value=""></ion-input>
-            </ion-item>
+        <ion-item>
+            <ion-label position="floating"> Correo
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="correo" type="text" required value=""></ion-input>
+        </ion-item>
 
-            <ion-item>
-                <ion-label position="floating"> Correo
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input [(ngModel)]="model.correo" name="correo" type="text" required value=""></ion-input>
-            </ion-item>
+        <ion-item>
+            <ion-label>Discapacidad</ion-label>
+            <ion-select [(ngModel)]="discapacidad" required interface="popover">
+                <ion-select-option value="Si">Si</ion-select-option>
+                <ion-select-option value="No">No</ion-select-option>
+            </ion-select>
+        </ion-item>
+        <ion-item>
+            <ion-label>Desplazado(a)</ion-label>
+            <ion-select [(ngModel)]="desplazado" required interface="popover">
+                <ion-select-option value="Si">Si</ion-select-option>
+                <ion-select-option value="No">No</ion-select-option>
+            </ion-select>
+        </ion-item>
 
-            <ion-item>
-                <ion-label>Discapacidad</ion-label>
-                <ion-select [(ngModel)]="model.disc" name="disc" required interface="popover">
-                    <ion-select-option value="Si">Si</ion-select-option>
-                    <ion-select-option value="No">No</ion-select-option>
-                </ion-select>
-            </ion-item>
-            <ion-item>
-                <ion-label>Desplazado(a)</ion-label>
-                <ion-select [(ngModel)]="model.desp" name="desp" required interface="popover">
-                    <ion-select-option value="Si">Si</ion-select-option>
-                    <ion-select-option value="No">No</ion-select-option>
-                </ion-select>
-            </ion-item>
-        </ion-list>
 
-        <div>
-            <!-- <ion-button routerLink="/niveles-educacion" routersDirection="forward">
+    </ion-list>
+
+    <div>
+
+        <ion-button (click)="saveForm()" type="submit" routerLink="/salud" routersDirection="forward">
             Guardar
-        </ion-button> -->
-            <ion-button type="submit">
-                Registrarse
-            </ion-button>
-        </div>
-    </form>
+        </ion-button>
+    </div>
 </ion-content>
