--- a/frontend/src/app/registro-documento/registro-documento.page.scss
+++ b/frontend/src/app/registro-documento/registro-documento.page.scss
@@ -17,7 +17,7 @@ ion-header>ion-toolbar>ion-buttons>ion-button>ion-icon {
     height: 100%;
 }
 
-ion-content>form>ion-item>ion-label {
+ion-content>ion-item>ion-label {
     color: #FFFFFF;
     margin: 15vh 0vw 0vh 0vw;
 }
@@ -32,7 +32,7 @@ ion-content>ion-item>ion-label>ion-input {
     font-size: 6vw;
 }
 
-ion-content>form>div>ion-button {
+ion-content>div>ion-button {
     --border-radius: 7vw;
     --background: var(--ion-color-secondary);
     --color: var(--ion-color-primary);
