--- a/frontend/src/app/salud/salud.page.html
+++ b/frontend/src/app/salud/salud.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-button routerLink="/niveles-educacion" routersDirection="back">
+            <ion-button routerLink="/datos-personales" routersDirection="back">
                 <!--  enrutar a la otra vista -->
                 <ion-icon slot="icon-only" name="arrow-round-back"></ion-icon>
             </ion-button>
@@ -12,35 +12,26 @@
 </ion-header>
 
 <ion-content>
-
     <ion-list>
-        <ion-radio-group>
-            <ion-item>
-                <ion-label position="floating">EPS
-                    <ion-text color="danger"></ion-text>
-                </ion-label>
-                <ion-input required type="text" oninput="handleLastNameValue(event)"></ion-input>
-            </ion-item>
 
-            <ion-item>
-                <ion-label>Contributivo</ion-label>
-                <ion-radio slot="end" color="secondary"></ion-radio>
-            </ion-item>
-            <ion-item>
-                <ion-label>Subsidiado</ion-label>
-                <ion-radio slot="end" color="secondary"></ion-radio>
-            </ion-item>
-            <ion-item>
-                <ion-label>Ninguno</ion-label>
-                <ion-radio slot="end" color="secondary"></ion-radio>
-            </ion-item>
-        </ion-radio-group>
+        <ion-item>
+            <ion-label position="floating">EPS
+                <ion-text color="danger"></ion-text>
+            </ion-label>
+            <ion-input [(ngModel)]="nombre_eps" required type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label>Regimen de Afiliacion</ion-label>
+            <ion-select [(ngModel)]="regimen_afiliacion" required interface="popover">
+                <ion-select-option value="Subsidiado">Subsidiado</ion-select-option>
+                <ion-select-option value="Contributivo">Contributivo</ion-select-option>
+            </ion-select>
+        </ion-item>
     </ion-list>
     <div>
-        <!-- <ion-button routerLink="/vivienda" routersDirection="forward">
-            Guardar
-        </ion-button> -->
-        <ion-button type="submit">
+
+        <ion-button (click)="saveForm()" type="submit" routerLink="/sitio-labor" routersDirection="forward">
             Guardar
         </ion-button>
     </div>
