--- a/frontend/src/app/sitio-labor/sitio-labor.page.scss
+++ b/frontend/src/app/sitio-labor/sitio-labor.page.scss
@@ -11,7 +11,7 @@ ion-header>ion-toolbar>ion-title {
     font-size: 6vw;
 }
 
-ion-content>form>ion-list>ion-item>ion-label {
+ion-content>ion-list>ion-item>ion-label {
     color: #FFFFFF;
 }
 
@@ -39,7 +39,7 @@ ion-content>ion-card> {
     --background: var(--ion-color-secondary);
 }
 
-ion-content>form>div>ion-button {
+ion-content>div>ion-button {
     --border-radius: 7vw;
     --background: var(--ion-color-secondary);
     --color: var(--ion-color-primary);
